# stmtparser.my

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
src/stmtparser_my/: __init__.py  cli.py  detect.py  transactions.py
src/stmtparser_my/parsers/: __init__.py  _utils.py  base.py  maybank_cc.py  maybank_savings.py  tng.py
tests/: test_parsers.py
