[project]
name = "stmtparser.my"
version = "0.1.0"
description = "Parse Malaysian bank/wallet PDF statements into normalized CSV and lossless JSON."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "hongjiaherng", email = "jiaherng2001@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11.9",
]

[project.scripts]
stmtparser = "stmtparser_my.cli:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["archived"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
